--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Fazendo o Download </h3>
-        <p class="text-body-secondary">Em alguns casos seu navegador pode bloquear o seu download por não ser um software assinado digitalmente. Mas não se preocupe você está seguro. Procure o alerta e mantenha seu arquivo. Caso seu antivírus faça o mesmo permita o arquivo em seu computador.</p>
+        <p class="text-body-secondary">Em alguns casos seu navegador pode bloquear o seu download por não ser um software assinado digitalmente(Pretendemos Assiná-lo em Breve). Mas não se preocupe você está seguro. Procure o alerta e mantenha seu arquivo. Caso seu antivírus faça o mesmo permita o arquivo em seu computador.</p>
       </div>
       
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Executando seu arquivo</h3>
-        <p class="text-body-secondary">Novamente o Windows pode te alertar que este é um arquivo não assinado digitalmente. clique em "Mais informações" e em seguida clique em "Executar assim mesmo". Esta mensagem não aparecerá outra vez</p>
+        <p class="text-body-secondary">Novamente o Windows pode te alertar que este é um arquivo não assinado digitalmente. Pretendemos assinalo em breve, mas até la recomendamos os seguintes passos: Não execute o arquivo diretamente no browser, abra o local do arquivo e de um clique duplo nele, caso o Windows o alerte clique em "Mais informações" e em seguida clique em "Executar assim mesmo". Esta mensagem não aparecerá outra vez</p>
       </div>
     </div>
   </div>
