--- a/index.html
+++ b/index.html
@@ -242,10 +242,13 @@
         
         
         <div class="row">
-          <div class="col-3>
+          <div class="col-3">
               <img src="browserError.png">  
           </div>
-          <div class="col-3>
+          <div class="col-3">
+              <img src="browserError.png">  
+          </div>
+          <div class="col-3">
               <img src="browserError.png">  
           </div>
         </div>
