--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
         <h3 class="fw-bold">Faça já o download para seu dispositivo Windows</h3>
         <div class="row" style="width: 100%;">
           <div class="col-5">
-               <a style="font-weight: bold;background-color: #1e297e !important;width: 100%;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-success btn-lg">Download exe</a>
+               <a style="font-weight: bold;background-color: #1e297e !important;width: 100%;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-success btn-lg">Baixar</a>
           </div>
         </div>
-        <p class="text-body-secondary">Versão Atual: V2.0.4 <br>Caso tenha problemas veja nosos video explicativo clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
+        <p class="text-body-secondary">Versão Atual: V2.0.4 <br>Antes de Baixar leia nossa artigo abaixo, <a href="#download">fazendo dowload</a> e <a href="#download">executando seu arquivo</a>.<a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
         <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">Este é um projeto independente, voltado para Desktop que se utiliza dos eventos do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
       </div>
@@ -231,7 +231,7 @@
 
     <div class="row row-cols-1 row-cols-md-2 g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Fazendo o Download </h3>
+        <h3 id="download" class="fw-bold">Fazendo o Download </h3>
         <p class="text-body-secondary">Em alguns casos seu navegador pode bloquear o seu download por não ser um software assinado digitalmente(Pretendemos Assiná-lo em Breve). Mas não se preocupe você está seguro. Procure o alerta e mantenha seu arquivo. Caso seu antivírus faça o mesmo permita o arquivo em seu computador.</p>
         <img src="browserError.png">
       </div>
