--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <main>
   <div class="container">
     <img style="height: 300px; width: 100%;border-radius: 21px;" src="banner3.png">
-    <h2 class=" border-bottom"></h2>
+    <h2 class="pb-2 border-bottom"></h2>
     
     <div class="container">
       <header class="d-flex justify-content-center">
@@ -242,7 +242,7 @@
     </div>
   </div>
 
-  <!--Espaco para anuncios-->
+    <!--Espaco para anuncios-->
     <div class="container">
       <div class="row marcador align-items-center">
         <div class="col mx-auto text-center">
@@ -255,10 +255,10 @@
     </div>
     <!--Fim Espaco para anuncios-->
 
-  <div class="container">
-    <h2 class=" border-bottom"></h2>
+  <div class="container px-4 py-5">
+    <h2 class="pb-2 border-bottom"></h2>
 
-    <div class="row row-cols-1 row-cols-md-2 g-5 ">
+    <div class="row row-cols-1 row-cols-md-2 g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 id="download" class="fw-bold">Fazendo o Download </h3>
         <p class="text-body-secondary">Em alguns casos seu navegador pode bloquear o seu download por não ser um software assinado digitalmente(Pretendemos Assiná-lo em Breve). Mas não se preocupe você está seguro. Procure o alerta e mantenha seu arquivo. Caso seu antivírus faça o mesmo permita o arquivo em seu computador.</p>
@@ -274,10 +274,10 @@
     </div>
   </div>
 
-  <div class="container">
-    <h2 class=" border-bottom"></h2>
+  <div class="container px-4 py-5">
+    <h2 class="pb-2 border-bottom"></h2>
 
-    <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 ">
+    <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold" id="termosDeUso">Termos de Uso</h3>
         <p class="text-body-secondary">
@@ -296,9 +296,9 @@
     
    </div>
   
-  <div class="container ">
-    <h2 class="border-bottom"></h2>
-     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 ">
+  <div class="container px-4 py-5">
+    <h2 class="pb-2 border-bottom"></h2>
+     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold" id="politicaDePrivacidade">Política de Privacidade</h3>
         <p>Nossa&nbsp;<a href="https://jeanoliveiragomes.github.io/politica-privacidade.html" target="_blank">política de privacidade</a>&nbsp;explica como tratamos seus dados pessoais e protegemos sua privacidade quando você usa nossos Serviços. Ao utilizar nossos Serviços, você concorda que a Google pode usar tais dados de acordo com nossa política de privacidade. Você e o Google também concordam com os&nbsp;<a href="https://privacy.google.com/businesses/controllerterms/" target="_blank">Termos de proteção de dados Controlador-Controlador do Google Ads</a>.</p>
